Fixed css for contacts when screen is on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -95,7 +95,7 @@
 
 .homewrapper {
   flex: 1;
-  min-height: 90vh;
+  min-height: 95vh;
   margin-top: 5vh;
   display: flex;
   flex-direction: column;
@@ -156,7 +156,7 @@
 
 .personnelwrapper {
   flex: 1;
-  min-height: 90vh;
+  min-height: 95vh;
   width: 100%;
   display: flex;
   justify-content: space-evenly;
@@ -260,7 +260,7 @@
 .serviceswrapper {
   position:relative;
   flex: 1;
-  min-height: 90vh;
+  min-height: 95vh;
   width: 100%;
   display: flex;
   justify-content: space-evenly;
@@ -360,6 +360,7 @@
   justify-content: center;
   align-items: center;
   gap: 20px;
+  text-align: center;
 }
 
 .contactheader {
@@ -367,6 +368,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  text-align: center;
   width: 100%;
 }
 
